syntax = "proto3";
package fifsky.blog.admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "types/common.proto";

option go_package = "gen/admin/v1";

// CateService 提供分类相关的接口
service CateService {
  // List 获取分类列表
  rpc List(google.protobuf.Empty) returns (CateListResponse) {
    option (google.api.http) = {
      post: "/blog/admin/cate/list"
      body: "*"
    };
  }
  // Create 创建分类
  rpc Create(CateCreateRequest) returns (fifsky.blog.types.IDResponse) {
    option (google.api.http) = {
      post: "/blog/admin/cate/create"
      body: "*"
    };
  }
  // Update 更新分类
  rpc Update(CateUpdateRequest) returns (fifsky.blog.types.IDResponse) {
    option (google.api.http) = {
      post: "/blog/admin/cate/update"
      body: "*"
    };
  }
  // Delete 删除分类
  rpc Delete(CateDeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/blog/admin/cate/delete"
      body: "*"
    };
  }
}

// CateDeleteRequest 删除分类请求
message CateDeleteRequest {
  int32 id = 1 [
    (buf.validate.field).int32.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message CateListItem {
  int32 id = 1;
  string name = 2;
  string desc = 3;
  string domain = 4;
  string created_at = 5;
  string updated_at = 6;
  int32 num = 7;
}
message CateListResponse {
  repeated CateListItem list = 1;
  int32 total = 2;
}

message CateCreateRequest {
  string name = 1 [
    (buf.validate.field).required = true,
    (google.api.field_behavior) = REQUIRED
  ];
  string desc = 2;
  string domain = 3 [
    (buf.validate.field).required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

message CateUpdateRequest {
  int32 id = 1 [
    (buf.validate.field).int32.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  string name = 2;
  string desc = 3;
  string domain = 4;
}
