syntax = "proto3";
package fifsky.blog.admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "types/common.proto";

option go_package = "gen/admin/v1";

// PhotoService 提供照片管理相关的接口
service PhotoService {
  // List 获取照片列表
  rpc List(PhotoListRequest) returns (PhotoListResponse) {
    option (google.api.http) = {
      post: "/blog/admin/photo/list"
      body: "*"
    };
  }
  // Create 创建照片
  rpc Create(PhotoCreateRequest) returns (fifsky.blog.types.IDResponse) {
    option (google.api.http) = {
      post: "/blog/admin/photo/create"
      body: "*"
    };
  }
  // Update 更新照片
  rpc Update(PhotoUpdateRequest) returns (fifsky.blog.types.IDResponse) {
    option (google.api.http) = {
      post: "/blog/admin/photo/update"
      body: "*"
    };
  }
  // Delete 删除照片
  rpc Delete(PhotoDeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/blog/admin/photo/delete"
      body: "*"
    };
  }
}

message PhotoItem {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string src = 4;
  string thumbnail = 5;
  int32 province = 6; // 省份 region_id
  string province_name = 7; // 省份名称
  int32 city = 8; // 城市 region_id
  string city_name = 9; // 城市名称
  string created_at = 10;
}

// PhotoListRequest 分页请求
message PhotoListRequest {
  int32 page = 1 [(buf.validate.field).int32.gt = 0];
}

// PhotoListResponse 照片列表响应
message PhotoListResponse {
  repeated PhotoItem list = 1;
  int32 total = 2;
}

// PhotoCreateRequest 创建照片请求
message PhotoCreateRequest {
  string title = 1 [
    (buf.validate.field).required = true,
    (google.api.field_behavior) = REQUIRED
  ];
  string description = 2;
  repeated string srcs = 3 [
    (buf.validate.field).repeated.min_items = 1,
    (google.api.field_behavior) = REQUIRED
  ]; // 支持多个图片地址
  int32 province = 4 [
    (buf.validate.field).int32.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  int32 city = 5 [
    (buf.validate.field).int32.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

// PhotoUpdateRequest 更新照片请求
message PhotoUpdateRequest {
  int32 id = 1 [
    (buf.validate.field).int32.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
  string title = 2;
  string description = 3;
  int32 province = 4;
  int32 city = 5;
}

// PhotoDeleteRequest 删除照片请求
message PhotoDeleteRequest {
  int32 id = 1 [
    (buf.validate.field).int32.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}
