syntax = "proto3";
package fifsky.blog.admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "gen/admin/v1";

// RegionService 提供区域查询相关的接口
service RegionService {
  // ListByParent 根据parent_id获取下级区域列表
  rpc ListByParent(RegionListRequest) returns (RegionListResponse) {
    option (google.api.http) = {
      post: "/blog/admin/region/list"
      body: "*"
    };
  }
}

message RegionItem {
  int32 region_id = 1;
  int32 parent_id = 2;
  int32 level = 3;
  string region_name = 4;
  string longitude = 5;
  string latitude = 6;
  string pinyin = 7;
  string az_no = 8;
}

// RegionListRequest 区域列表请求
message RegionListRequest {
  int32 parent_id = 1 [(buf.validate.field).int32.gte = 0];
}

// RegionListResponse 区域列表响应
message RegionListResponse {
  repeated RegionItem list = 1;
}
