syntax = "proto3";
package fifsky.blog.api.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "api/v1/common.proto";
option go_package = "gen/api/v1";

service CateService {
  rpc All(google.protobuf.Empty) returns (CateMenuResponse) {
    option (google.api.http) = {
      post: "/api/cate/all"
      body: "*"
    };
  }
}

message CateMenuItem {
  string url = 1;
  string content = 2;
}
message CateMenuResponse {
  repeated CateMenuItem list = 1;
}

message CateListItem {
  int32 id = 1;
  string name = 2;
  string desc = 3;
  string domain = 4;
  string created_at = 5;
  string updated_at = 6;
  int32 num = 7;
}
