syntax = "proto3";
package fifsky.blog.api.v1;

import "api/v1/common.proto";
import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

option go_package = "gen/api/v1";

// LinkService 提供链接相关的接口
service LinkService {
  // All 获取所有链接
  rpc All(google.protobuf.Empty) returns (LinkMenuResponse) {
    option (google.api.http) = {
      post: "/api/link/all"
      body: "*"
    };
  }
}

message LinkMenuItem {
  string url = 1;
  string content = 2;
}

message LinkMenuResponse {
  repeated LinkMenuItem list = 1;
}

message LinkItem {
  int32 id = 1;
  string name = 2;
  string url = 3;
  string desc = 4;
  string created_at = 5;
}

message LinkListResponse {
  repeated LinkItem list = 1;
  int32 page_total = 2;
}
