syntax = "proto3";
package fifsky.blog.api.v1;

import "types/common.proto";
import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

option go_package = "gen/api/v1";

// UserService 提供用户相关的接口
service UserService {
  // Login 登录
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/login"
      body: "*"
    };
  }
}

message GetUserRequest {
  // 用户ID
  int32 id = 1 [
    (buf.validate.field).int32.gt = 0,
    (google.api.field_behavior) = REQUIRED
  ];
}

message UserItem {
  int32 id = 1;
  string name = 2;
  string nick_name = 3;
  string email = 4;
  int32 status = 5;
  int32 type = 6;
  string created_at = 7;
  string updated_at = 8;
}

message LoginRequest {
  string user_name = 1 [
    (buf.validate.field).required = true,
    (google.api.field_behavior) = REQUIRED
  ];
  string password = 2 [
    (buf.validate.field).required = true,
    (google.api.field_behavior) = REQUIRED
  ];
}

message LoginResponse {
  string access_token = 1;
  UserItem user = 2;
}
